# mkproject

completions/: _mkproject-python
template/generic/: .relint.yml
template/python/: .ackrc  .envrc  .python-version  fabfile.py  pyproject.toml
template/python/.github/: dependabot.yml
template/python/.github/workflows/: build.yml
